Background Image is updated

--- a/JS_Projects/Project1_QR_Code_Generator/style.css
+++ b/JS_Projects/Project1_QR_Code_Generator/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background:url(/JS_Projects/Project1_QR_Code_Generator/bgimg.jpeg);
+    background:url(/JS_Projects/Project1_QR_Code_Generator/bgimg2.png);
     background-size: cover;
     background-position: center; 
     background-attachment: fixed;
