--- a/facebook_clone_project/public/style.css
+++ b/facebook_clone_project/public/style.css
@@ -153,6 +153,92 @@ width: fit-content;
 /* Main Content Css */
 
 
+/* right Sidebar */
+.sidebar-title{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 18px;
+}
+
+.sidebar-title h4{
+    font-weight: 600;
+    font-size: 16px;
+}
+
+.sidebar-title a{
+    text-decoration: none;
+    color:#1876f2;
+    font-size: 14px;
+}
+
+.rightsidebar{
+    background: #fff;
+    padding:20px;
+    border-radius: 4px;
+    color:#626262
+}
 
 
+.event{
+    display: flex;
+    font-size: 14px;
+    margin-bottom: 20px;
+    /* justify-content: space-between; */
+}
+.left-event{
+border-radius: 10px;
+height:55px;
+width:60px;
+margin-right: 15px;
+padding-top: 10px;
+text-align: center;
+position: relative;
+overflow: hidden;
+box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+.event p{
+    font-size: 14px;
+}
+.event a{
+    font-size: 14px;
+    text-decoration: none;
+}
 
+.left-event span{
+    position: absolute;
+    bottom:0;
+    left:0;
+    width:100%;
+    background: #1876f2;
+    color:#fff;
+    font-size: 10px;
+    padding:4px 0;
+}
+
+.sidebar-ads{
+    width:100%;
+    margin-bottom:20px;
+    border-radius: 4px;
+}
+
+.online-list{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.online-list .online img{
+    width:40px;
+    border-radius: 50%;
+}
+.online-list .online {
+    width:40px;
+    border-radius: 50%;
+    margin-right:15px;
+}
+
+.online-list .online:after{
+    top:unset;
+    bottom:5px;
+}
