--- a/facebook_clone_project/public/style.css
+++ b/facebook_clone_project/public/style.css
@@ -93,7 +93,8 @@ input[type="search"]{
 }
 
 /* Navbar CSS Ends */
-
+/*************************************************************************************************
+**************************************************************************************************/
 .container{
     display: flex;
     justify-content: space-between;
@@ -115,7 +116,8 @@ input[type="search"]{
     top:70px;
     align-self: flex-start;
 }
-
+/* ********************************************************************************************
+*********************************************************************************************** */
 /* Left Sidebar Css */
 .imp-links a , .shortcut-links a{
 text-decoration: none;
@@ -149,10 +151,8 @@ width: fit-content;
     margin:25px 0;
     color: #626262;
 }
-
-/* Main Content Css */
-
-
+/* *******************************************************************************************
+********************************************************************************************** */
 /* right Sidebar */
 .sidebar-title{
     display: flex;
@@ -242,3 +242,70 @@ box-shadow: 0 0 10px rgba(0,0,0,0.1);
     top:unset;
     bottom:5px;
 }
+/* ***********************************************************************************************
+************************************************************************************************** */
+/*  Main Content Css */ 
+
+.story-gallery{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+.story{
+    flex-basis: 18%;
+    padding-top: 32%;
+    position: relative;
+    background-image: linear-gradient(transparent,rgba(0,0,0,0.8)),url(/facebook_clone_project/images/status-1.png);
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+}
+
+.story img{
+    position: absolute;
+    width:45px;
+    border-radius: 50%;
+    top:10px;
+    left:10px;
+    border: 3px solid #1876f2;
+}
+
+.story p{
+    position: absolute;
+    bottom:10px;
+    width:100%;
+    text-align: center;
+    color:#fff;
+    font-size: 14px;
+}
+
+.story1{
+    background-image: linear-gradient(transparent,rgba(0,0,0,0.8)),url(/facebook_clone_project/images/status-1.png);
+
+}
+.story2{
+    background-image: linear-gradient(transparent,rgba(0,0,0,0.8)),url(/facebook_clone_project/images/status-3.png);
+
+}
+.story3{
+    background-image: linear-gradient(transparent,rgba(0,0,0,0.8)),url(/facebook_clone_project/images/status-4.png);
+
+}
+.story4{
+    background-image: linear-gradient(transparent,rgba(0,0,0,0.8)),url(/facebook_clone_project/images/status-5.png);
+
+}
+.story5{
+    background-image: linear-gradient(transparent,rgba(0,0,0,0.8)),url(/facebook_clone_project/images/status-2.png);
+
+}
+
+.story.story1 img{
+    top:unset;
+    left:50%;
+    bottom:40px;
+    transform: translateX(-50%);
+    border:0;
+    width:35px;
+}
+
