--- a/facebook_clone_project/public/style.css
+++ b/facebook_clone_project/public/style.css
@@ -1,311 +1,463 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family:'poppins', sans-serif;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "poppins", sans-serif;
+  box-sizing: border-box;
 }
 
-body{
-    background: #efefef;
+body {
+  background: #efefef;
 }
 
 /* Navbar CSS Start */
-nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: #1876f2;
-    padding:5px 5%;
-    position: sticky;
-    top:0;
-    z-index: 100;
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #1876f2;
+  padding: 5px 5%;
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
 
-.logo{
-    width:160px;
-    margin-right:45px;
+.logo {
+  width: 160px;
+  margin-right: 45px;
 }
 
-.nav-left,.nav-right{
-    display: flex;
-    align-items: center;
+.nav-left,
+.nav-right {
+  display: flex;
+  align-items: center;
 }
 
-.nav-left ul li{
-    list-style: none;
-    display: inline-block;
+.nav-left ul li {
+  list-style: none;
+  display: inline-block;
 }
 
-.nav-left ul li img{
-    width: 28px;
-    margin:0 15px;
+.nav-left ul li img {
+  width: 28px;
+  margin: 0 15px;
 }
 
-.nav-user-icon img{
-    width:40px;
-    border-radius: 50%;
-    cursor: pointer;
+.nav-user-icon img {
+  width: 40px;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
-.nav-user-icon{
-    margin-left: 30px;
+.nav-user-icon {
+  margin-left: 30px;
 }
 
-.search-box{
-    background: #efefef;
-    width:350px;
-    border-radius: 20px;
-    display: flex;
-    align-items: center;
-    padding:5px 15px;
-   
+.search-box {
+  background: #efefef;
+  width: 350px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  padding: 5px 15px;
 }
 
-.search-box img{
-    width:18px;
-    background: #efefef;
+.search-box img {
+  width: 18px;
+  background: #efefef;
 }
 
-input[type="search"]{
-    border:0;
-    outline:0;
-    width:100%;
-    background: transparent;
-    font-size: 14px;
-    /* text-align: center; */
+input[type="search"] {
+  border: 0;
+  outline: 0;
+  width: 100%;
+  background: transparent;
+  font-size: 14px;
+  /* text-align: center; */
 }
 
 /* online users  green icon css */
 
-.online{
-    position: relative;
+.online {
+  position: relative;
 }
-.online::after{
-    content:'';
-    width: 7px;
-    height: 7px;
-    border:2px solid #fff;
-    border-radius: 50%;
-    background: #41db51;
-    position: absolute;
-    top:0;
-    right:0;
+.online::after {
+  content: "";
+  width: 7px;
+  height: 7px;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  background: #41db51;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 /* Navbar CSS Ends */
 /*************************************************************************************************
 **************************************************************************************************/
-.container{
-    display: flex;
-    justify-content: space-between;
-    padding:13px 5%;
+.container {
+  display: flex;
+  justify-content: space-between;
+  padding: 13px 5%;
 }
 
-.leftsidebar{
-    flex-basis: 25%;
-    position: sticky;
-    top:70px;
-    align-self: flex-start;
+.leftsidebar {
+  flex-basis: 25%;
+  position: sticky;
+  top: 70px;
+  align-self: flex-start;
 }
-.maincontent{
-    flex-basis: 47%;
+.maincontent {
+  flex-basis: 47%;
 }
-.rightsidebar{
-    flex-basis: 25%;
-    position: sticky;
-    top:70px;
-    align-self: flex-start;
+.rightsidebar {
+  flex-basis: 25%;
+  position: sticky;
+  top: 70px;
+  align-self: flex-start;
 }
 /* ********************************************************************************************
 *********************************************************************************************** */
 /* Left Sidebar Css */
-.imp-links a , .shortcut-links a{
-text-decoration: none;
-display: flex;
-align-items: center;
-margin-bottom: 30px;
-color:#626262;
-width: fit-content;
+.imp-links a,
+.shortcut-links a {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+  color: #626262;
+  width: fit-content;
 }
 
-.imp-links a img{
-    width:25px;
-    margin-right: 15px;
+.imp-links a img {
+  width: 25px;
+  margin-right: 15px;
 }
 
-.imp-links a:last-child{
-    color:#1876f2;
+.imp-links a:last-child {
+  color: #1876f2;
 }
 
-.imp-links{
-    border-bottom: 1px solid #ccc;
+.imp-links {
+  border-bottom: 1px solid #ccc;
 }
 
-.shortcut-links a img{
-    width: 40px;
-    border-radius: 5px;
-    margin-right: 15px;
+.shortcut-links a img {
+  width: 40px;
+  border-radius: 5px;
+  margin-right: 15px;
 }
 
-.shortcut-links p{
-    margin:25px 0;
-    color: #626262;
+.shortcut-links p {
+  margin: 25px 0;
+  color: #626262;
 }
 /* *******************************************************************************************
 ********************************************************************************************** */
 /* right Sidebar */
-.sidebar-title{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 18px;
+.sidebar-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 18px;
 }
 
-.sidebar-title h4{
-    font-weight: 600;
-    font-size: 16px;
+.sidebar-title h4 {
+  font-weight: 600;
+  font-size: 16px;
 }
 
-.sidebar-title a{
-    text-decoration: none;
-    color:#1876f2;
-    font-size: 14px;
+.sidebar-title a {
+  text-decoration: none;
+  color: #1876f2;
+  font-size: 14px;
 }
 
-.rightsidebar{
-    background: #fff;
-    padding:20px;
-    border-radius: 4px;
-    color:#626262
+.rightsidebar {
+  background: #fff;
+  padding: 20px;
+  border-radius: 4px;
+  color: #626262;
 }
 
-
-.event{
-    display: flex;
-    font-size: 14px;
-    margin-bottom: 20px;
-    /* justify-content: space-between; */
+.event {
+  display: flex;
+  font-size: 14px;
+  margin-bottom: 20px;
+  /* justify-content: space-between; */
 }
-.left-event{
-border-radius: 10px;
-height:55px;
-width:60px;
-margin-right: 15px;
-padding-top: 10px;
-text-align: center;
-position: relative;
-overflow: hidden;
-box-shadow: 0 0 10px rgba(0,0,0,0.1);
+.left-event {
+  border-radius: 10px;
+  height: 55px;
+  width: 60px;
+  margin-right: 15px;
+  padding-top: 10px;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-.event p{
-    font-size: 14px;
+.event p {
+  font-size: 14px;
 }
-.event a{
-    font-size: 14px;
-    text-decoration: none;
-}
-
-.left-event span{
-    position: absolute;
-    bottom:0;
-    left:0;
-    width:100%;
-    background: #1876f2;
-    color:#fff;
-    font-size: 10px;
-    padding:4px 0;
+.event a {
+  font-size: 14px;
+  text-decoration: none;
 }
 
-.sidebar-ads{
-    width:100%;
-    margin-bottom:20px;
-    border-radius: 4px;
+.left-event span {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: #1876f2;
+  color: #fff;
+  font-size: 10px;
+  padding: 4px 0;
 }
 
-.online-list{
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
+.sidebar-ads {
+  width: 100%;
+  margin-bottom: 20px;
+  border-radius: 4px;
 }
 
-.online-list .online img{
-    width:40px;
-    border-radius: 50%;
+.online-list {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.online-list .online img {
+  width: 40px;
+  border-radius: 50%;
 }
 .online-list .online {
-    width:40px;
-    border-radius: 50%;
-    margin-right:15px;
+  width: 40px;
+  border-radius: 50%;
+  margin-right: 15px;
 }
 
-.online-list .online:after{
-    top:unset;
-    bottom:5px;
+.online-list .online:after {
+  top: unset;
+  bottom: 5px;
 }
 /* ***********************************************************************************************
 ************************************************************************************************** */
-/*  Main Content Css */ 
+/*  Main Content Css */
+/* Main section story  section css */
+.story-gallery {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.story {
+  flex-basis: 18%;
+  padding-top: 32%;
+  position: relative;
+  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.8)),
+    url(/facebook_clone_project/images/status-1.png);
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
 
-.story-gallery{
+.story img {
+  position: absolute;
+  width: 45px;
+  border-radius: 50%;
+  top: 10px;
+  left: 10px;
+  border: 3px solid #1876f2;
+}
+
+.story p {
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  font-size: 14px;
+}
+
+.story1 {
+  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.8)),
+    url(/facebook_clone_project/images/status-1.png);
+}
+.story2 {
+  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.8)),
+    url(/facebook_clone_project/images/status-3.png);
+}
+.story3 {
+  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.8)),
+    url(/facebook_clone_project/images/status-4.png);
+}
+.story4 {
+  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.8)),
+    url(/facebook_clone_project/images/status-5.png);
+}
+.story5 {
+  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.8)),
+    url(/facebook_clone_project/images/status-2.png);
+}
+
+.story.story1 img {
+  top: unset;
+  left: 50%;
+  bottom: 40px;
+  transform: translateX(-50%);
+  border: 0;
+  width: 35px;
+}
+
+/* story section completed */
+
+/* Add post section in the main section  */
+.write-post-container {
+  width: 100%;
+  background: #fff;
+  border-radius: 6px;
+  padding: 20px;
+  color: #626262;
+}
+
+.user-profile {
+  display: flex;
+  align-items: center;
+}
+
+.user-profile img {
+  width: 45px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.user-profile p {
+  margin-bottom: -5px;
+  font-weight: 600;
+  color: #626262;
+}
+
+.user-profile small {
+  font-size: 12px;
+}
+
+
+
+.post-input-container {
+  padding-left: 55px;
+  padding-top: 20px;
+}
+
+.post-input-container textarea {
+  width: 100%;
+  border: 0;
+  outline: 0;
+  border-bottom: 1px solid #ccc;
+  background: transparent;
+  resize: none; /*remove the resize feature from the textarea*/
+}
+
+.add-post-links {
+  display: flex;
+  margin-top: 10px;
+}
+
+.add-post-links a {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  color: #626262;
+  margin-right: 30px;
+}
+.add-post-links img {
+  width: 20px;
+  margin-right: 10px;
+}
+
+/* Add post section End in the main section  */
+
+.post-container {
+  width: 100%;
+  background: #fff;
+  border-radius: 6px;
+  padding: 20px;
+  color: #626262;
+  margin: 20px 0px;
+}
+.user-profile span {
+  font-size: 13px;
+  color: #9a9a9a;
+}
+
+.post-text {
+  color: #9a9a9a;
+  margin: 15px 0;
+  font-size: 15px;
+}
+
+.post-text span {
+  color: #626262;
+  font-weight: bolder;
+}
+.post-text a {
+  color: #1876f2;
+  text-decoration: none;
+}
+
+.post-img {
+  width: 100%;
+  border-radius: 4px;
+  margin-bottom: 5px;
+}
+
+.post-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.activity-icons div img {
+  width: 18px;
+  margin-right: 10px;
+}
+
+.activity-icons div {
+  display: inline-flex;
+  align-items: center;
+  margin-right: 30px;
+}
+.post-profile-icons{
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
+    align-items: center;
+    /* justify-content: space-between; */
 }
-.story{
-    flex-basis: 18%;
-    padding-top: 32%;
-    position: relative;
-    background-image: linear-gradient(transparent,rgba(0,0,0,0.8)),url(/facebook_clone_project/images/status-1.png);
-    background-position: center;
-    background-size: cover;
-    border-radius: 10px;
+.post-profile-icons img {
+  width: 20px;
+  border-radius: 50%;
+  margin-right: 5px;
 }
 
-.story img{
-    position: absolute;
-    width:45px;
-    border-radius: 50%;
-    top:10px;
-    left:10px;
-    border: 3px solid #1876f2;
+.post-row a{
+    color:#9a9a9a;
 }
 
-.story p{
-    position: absolute;
-    bottom:10px;
-    width:100%;
+.load-more-btn{
+    display: block;
+    margin:auto;
+    cursor:pointer;
+    padding:5px 10px;
+    border:1px solid #9a9a9a;
+    border-radius: 4px;
+    color:#626262;
+    background: transparent;
+
+
+}
+
+.footer{
     text-align: center;
-    color:#fff;
-    font-size: 14px;
+    color:#9a9a9a;
+    padding:10px 0 20px;
+    font-size: 13px;
 }
-
-.story1{
-    background-image: linear-gradient(transparent,rgba(0,0,0,0.8)),url(/facebook_clone_project/images/status-1.png);
-
-}
-.story2{
-    background-image: linear-gradient(transparent,rgba(0,0,0,0.8)),url(/facebook_clone_project/images/status-3.png);
-
-}
-.story3{
-    background-image: linear-gradient(transparent,rgba(0,0,0,0.8)),url(/facebook_clone_project/images/status-4.png);
-
-}
-.story4{
-    background-image: linear-gradient(transparent,rgba(0,0,0,0.8)),url(/facebook_clone_project/images/status-5.png);
-
-}
-.story5{
-    background-image: linear-gradient(transparent,rgba(0,0,0,0.8)),url(/facebook_clone_project/images/status-2.png);
-
-}
-
-.story.story1 img{
-    top:unset;
-    left:50%;
-    bottom:40px;
-    transform: translateX(-50%);
-    border:0;
-    width:35px;
-}
-
