styling of the setting menu bar

--- a/facebook_clone_project/public/style.css
+++ b/facebook_clone_project/public/style.css
@@ -461,3 +461,67 @@ input[type="search"] {
     padding:10px 0 20px;
     font-size: 13px;
 }
+
+/* Setting menu */
+.settings-menu{
+    position: absolute;
+    width:90%;
+    max-width: 350px;
+    height: 400px;
+    background: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+    border-radius: 4px;
+    overflow: hidden;
+    top:108%;
+    right:5%;
+    max-height: 0;
+    transition: max-height 0.3s;
+
+}
+
+.settings-menu-height{
+    max-height: 450px;
+}
+.user-profile a{
+    font-size: 12px;
+    color:#1876f2;
+    text-decoration: none;
+}
+.settings-menu-inner{
+    padding:20px;
+}
+
+.settings-menu hr{
+    border:0;
+    height: 1px;
+    background: #9a9a9a;
+    margin:15px 0;
+}
+
+.setting-links{
+    display: flex;
+    align-items: center;
+    margin: 15px 0;
+}
+.settings-icon{
+    width:38px;
+    margin-right: 10px;
+    border-radius: 50%;
+
+}
+
+.setting-links a{
+    display: flex;
+    flex:1;
+    align-items: center;
+    justify-content: space-between;
+    text-decoration: none;
+    color:#626262
+}
+
+.setting-links img:last-child{
+    width: 13px;
+    margin-left: 15px;
+}
+
+/* Setting links end */
