styling of the toggle button and the theme color

--- a/facebook_clone_project/public/style.css
+++ b/facebook_clone_project/public/style.css
@@ -5,8 +5,28 @@
   box-sizing: border-box;
 }
 
+:root{
+  --body-color:#efefef;
+  --nav-color:#1876f2;
+  --bg-color:#fff;
+}
+
+.dark-theme{
+  --body-color:#0a0a0a;
+  --nav-color:#000;
+  --bg-color:#000;
+}
+
+
+body.dark-mode{
+  --body-color:#0a0a0a;
+  --nav-color:#000;
+  --bg-color:#000;
+}
+
 body {
-  background: #efefef;
+  background: var(--body-color);
+  transition: background 0.3s;
 }
 
 /* Navbar CSS Start */
@@ -14,7 +34,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #1876f2;
+  background: var(--nav-color);
   padding: 5px 5%;
   position: sticky;
   top: 0;
@@ -115,7 +135,12 @@ input[type="search"] {
   position: sticky;
   top: 70px;
   align-self: flex-start;
+  background: var(--bg-color);
+  padding:20px;
+  border-radius: 4px;
+  color:#626262;
 }
+
 /* ********************************************************************************************
 *********************************************************************************************** */
 /* Left Sidebar Css */
@@ -174,7 +199,7 @@ input[type="search"] {
 }
 
 .rightsidebar {
-  background: #fff;
+  background: var(--bg-color);
   padding: 20px;
   border-radius: 4px;
   color: #626262;
@@ -315,7 +340,7 @@ input[type="search"] {
 /* Add post section in the main section  */
 .write-post-container {
   width: 100%;
-  background: #fff;
+  background: var(--bg-color);
   border-radius: 6px;
   padding: 20px;
   color: #626262;
@@ -379,7 +404,7 @@ input[type="search"] {
 
 .post-container {
   width: 100%;
-  background: #fff;
+  background: var(--bg-color);
   border-radius: 6px;
   padding: 20px;
   color: #626262;
@@ -468,7 +493,7 @@ input[type="search"] {
     width:90%;
     max-width: 350px;
     height: 400px;
-    background: #fff;
+    background: var(--bg-color);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
     border-radius: 4px;
     overflow: hidden;
@@ -524,4 +549,32 @@ input[type="search"] {
     margin-left: 15px;
 }
 
+#dark-btn{
+  position: absolute;
+  top:20px;
+  right: 20px;
+  background: #ccc;
+  width:45px;
+  border-radius:15px;
+  padding: 2px 3px;
+  cursor:pointer;
+  transition: padding-left 0.5s, background 0.5s;
+}
+
+#dark-btn span{
+  width:18px;
+  height:18px;
+  background: #fff;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+#dark-btn.dark-btn-on{
+padding-left: 23px;
+background: #0a0a0a;
+}
+
+/* .dark-mode{
+  background: #000;
+} */
 /* Setting links end */
