profile page css styling

--- a/facebook_clone_project/public/style.css
+++ b/facebook_clone_project/public/style.css
@@ -578,3 +578,17 @@ background: #0a0a0a;
   background: #000;
 } */
 /* Setting links end */
+
+/* ***********************************************************************************************
+************************************************************************************************** */
+/*  Profile section CSS*/
+.profile-container{
+  padding:20px 15%;
+  color:#626262;
+}
+
+.cover-img{
+  width:100%;
+  border-radius:6px;
+  
+}
