Styling of the profile page

--- a/facebook_clone_project/public/style.css
+++ b/facebook_clone_project/public/style.css
@@ -590,5 +590,174 @@ background: #0a0a0a;
 .cover-img{
   width:100%;
   border-radius:6px;
-  
+  margin-bottom: 14px;
+}
+
+.profile-details{
+  background: var(--bg-color);
+  padding:20px;
+  border-radius: 4px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.pd-row{
+  display: flex;
+  align-items: flex-start;
+}
+
+.pd-images{
+  width:100px;
+  margin-right: 20px;
+  border-radius: 6px;
+}
+
+.pd-row div h3{
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.pd-row div p{
+  font-size: 13px;
+}
+
+.pd-row div img{
+  width: 25px;
+  border-radius: 50%;
+  margin-top:12px ;
+}
+
+.pd-right button{
+  background: #1876f2;
+  border:none;
+  outline: none;
+  padding: 6px 10px;
+  display: inline-flex;
+  align-items: center;
+  color:#fff;
+  border-radius: 3px;
+  margin-left:10px; 
+  cursor: pointer;
+}
+.pd-right button img{
+  height: 15px;
+  margin-right: 10px;
+}
+
+.pd-right button:first-child{
+  background: #e4e6eb;
+  color:#626262;
+}
+
+.pd-right{
+  text-align: right;
+}
+
+.pd-right a{
+  background: #e4e6eb;
+  border-radius: 3px;
+  padding: 12px;
+  display: inline-flex;
+  margin-top: 30px;
+}
+
+.profile-info{
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.info-col{
+  flex-basis: 33%;
+}
+
+.post-col{
+  flex-basis: 65%;
+}
+.profile-intro{
+  background: var(--bg-color);
+  padding:20px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+}
+.profile-intro h3{
+  font-weight: 600;
+}
+
+.intro-text{
+  text-align: center;
+  margin: 10px 0;
+  font-size: 15px;
+}
+
+.profile-intro hr{
+  border:0;
+  height: 1px;
+  background: #ccc;
+  margin:24px 0;
+}
+
+.profile-intro ul li{
+  list-style: none;
+  font-size: 15px;
+  margin: 15px 0;
+  display: flex;
+  align-items: center;
+}
+.profile-intro ul li img{
+  width:25px;
+  margin-right: 10px;
+}
+
+.title-box{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.title-box a{
+  text-decoration: none;
+  color:#1876f2;
+  font-size: 14px;
+}
+
+.photo-box{
+  display:grid;
+  grid-template-columns: repeat(3,auto);
+  grid-gap: 10px;
+  margin-top: 15px;
+}
+.photo-box div img{
+  width:100%;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.profile-intro p{
+  font-size: 14px;
+}
+
+.friends-box{
+  display:grid;
+  grid-template-columns: repeat(3,auto);
+  grid-gap: 10px;
+  margin-top: 15px;
+}
+
+.friends-box div img{
+  width: 100%;
+  cursor: pointer;
+  border-radius: 5px;
+  padding-bottom: 20px;
+}
+
+.friends-box div{
+  position: relative;
+}
+
+.friends-box p{
+  position: absolute;
+  bottom:0;
+
 }
