icons css styling

--- a/facebook_clone_project/public/style.css
+++ b/facebook_clone_project/public/style.css
@@ -61,6 +61,10 @@ nav {
   width: 28px;
   margin: 0 15px;
 }
+.nav-left ul li img:hover{
+  cursor:pointer;
+
+}
 
 .nav-user-icon img {
   width: 40px;
@@ -872,4 +876,11 @@ font-size: 9px;
 #additional-content.show {
     max-height: 400px; /* adjust the value based on your content height */
     transition: max-height 0.5s ease;
+}
+
+#additional-content .fa-solid,.fa-brands{
+  color:#1876f2;
+  margin-right: 15px;
+  width: 25px;
+  font-size: 20px;
 }
